--- a/src/components/Comments/NewComment.module.scss
+++ b/src/components/Comments/NewComment.module.scss
@@ -21,6 +21,23 @@
   font-size: 14px;
 }
 
+.buttons {
+  display: flex;
+  flex-direction: column;
+  row-gap: 15px;
+  margin-bottom: 25px;
+
+  @media screen and (min-width: 480px) {
+    margin-bottom: 0;
+  }
+
+  @media screen and (min-width: 640px) {
+    flex-direction: row;
+    column-gap: 25px;
+    row-gap: 0;
+  }
+}
+
 .submit {
   border: 2px solid #505590;
   background-color: #505590;
@@ -30,7 +47,6 @@
   cursor: pointer;
   border-radius: 10px;
   padding: 10px 30px;
-  margin-right: 30px;
   transition: all 0.5s;
 
   &:disabled {
