--- a/src/components/Layout/Container.module.scss
+++ b/src/components/Layout/Container.module.scss
@@ -1,5 +1,14 @@
 .container {
-  width: 1100px;
   margin: 0 auto;
   position: relative;
+  min-width: 320px;
+  width: calc(100vw - 40px);
+  
+  @media screen and (min-width: 480px) {
+    width: calc(100vw - 80px);
+  }
+
+  @media screen and (min-width: 1280px) {
+    width: 1100px;
+  }
 }
