--- a/src/components/NewArticle/NewArticle.module.scss
+++ b/src/components/NewArticle/NewArticle.module.scss
@@ -41,7 +41,17 @@
 
 .buttons {
   display: flex;
-  gap: 30px;
+  margin-bottom: 20px;
+  flex-direction: column;
+
+  @media screen and (min-width: 480px) {
+    margin-bottom: 0;
+  }
+
+  @media screen and (min-width: 640px) {
+    flex-direction: row;
+    gap: 30px;
+  }
 
   button {
     margin: 10px 0;
