--- a/src/components/UI/InputDate/InputDate.module.scss
+++ b/src/components/UI/InputDate/InputDate.module.scss
@@ -6,14 +6,33 @@
 
   &_wrapper {
     display: flex;
-    flex-direction: row;
-    gap: 20px;
+    flex-direction: column;
+    gap: 10px;
+
+    @media screen and (min-width: 480px) {
+      flex-direction: row;
+      gap: 20px;
+    }
+
+    & > div > div {
+      width: 100%;
+    
+      @media screen and (min-width: 480px) {
+        width: auto;
+      }
+    }
 
     input {
       height: 32px;
       border-radius: 5px;
       border: 1px solid #94928b;
       padding: 5px;
+
+      width: 100%;
+    
+      @media screen and (min-width: 480px) {
+        width: auto;
+      }
     }
   }
 
@@ -30,4 +49,12 @@
 
 .required {
   color: #f00;
+}
+
+.react-datepicker-wrapper {
+  width: 100%;
+
+  @media screen and (min-width: 480px) {
+    width: auto;
+  }
 }
