--- a/src/components/UI/Select/Select.module.scss
+++ b/src/components/UI/Select/Select.module.scss
@@ -6,8 +6,13 @@
 
   &_wrapper {
     display: flex;
-    flex-direction: row;
-    gap: 20px;
+    flex-direction: column;
+    gap: 10px;
+
+    @media screen and (min-width: 640px) {
+      flex-direction: row;
+      gap: 20px;
+    }
   }
 
   label {
@@ -21,7 +26,12 @@
     align-items: center;
     position: relative;
     height: 32px;
-    width: 300px;
+    min-width: 300px;
+    width: auto;
+
+    @media screen and (min-width: 640px) {
+      width: 300px;
+    }
 
     &_multi {
       height: auto;
