--- a/src/components/UI/Modal.module.scss
+++ b/src/components/UI/Modal.module.scss
@@ -28,13 +28,25 @@
   top: 0;
   left: 0;
   right: 0;
-  min-width: 1180px;
+  bottom: 0;
+  overflow-y: scroll;
+  width: 100vw;
   background-color: #101040;
   color: #e2e2f7;
-  padding: 70px 0 40px;
+  padding: 20px 0;
   box-shadow: 0 2px 8px rgb(0 0 0 / 25%);
   z-index: 30;
   animation: slide-down 300ms ease-out forwards;
+
+  @media screen and (min-width: 768px) {
+    padding: 70px 0 40px;
+    bottom: auto;
+  }
+
+  @media screen and (min-width: 1280px) {
+    min-width: 1180px;
+    width: auto;
+  }
 }
 
 @keyframes slide-down {
